# grantami-bomanalytics-openapi

./: .isort.cfg  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  README.md  pom.xml  zizmor.yml
GrantaBomSvcs/: README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
GrantaBomSvcs/docs/: ComplianceApi.md  DocumentationApi.md  GrantaBomAnalyticsServicesInterfaceCommonCoatingWithCompliance.md  GrantaBomAnalyticsServicesInterfaceCommonImpactedSubstance.md  GrantaBomAnalyticsServicesInterfaceCommonIndicatorDefinition.md  GrantaBomAnalyticsServicesInterfaceCommonIndicatorResult.md  GrantaBomAnalyticsServicesInterfaceCommonLegislationWithImpactedSubstances.md  GrantaBomAnalyticsServicesInterfaceCommonMaterialReference.md  GrantaBomAnalyticsServicesInterfaceCommonMaterialWithCompliance.md  GrantaBomAnalyticsServicesInterfaceCommonPartReference.md  GrantaBomAnalyticsServicesInterfaceCommonPartWithCompliance.md  GrantaBomAnalyticsServicesInterfaceCommonRequestConfig.md  GrantaBomAnalyticsServicesInterfaceCommonSpecificationReference.md  GrantaBomAnalyticsServicesInterfaceCommonSpecificationWithCompliance.md  GrantaBomAnalyticsServicesInterfaceCommonSubstanceWithCompliance.md  GrantaBomAnalyticsServicesInterfaceGetComplianceForBom1711Request.md  GrantaBomAnalyticsServicesInterfaceGetComplianceForBom1711Response.md  GrantaBomAnalyticsServicesInterfaceGetComplianceForMaterialsRequest.md  ImpactedSubstancesApi.md  (+19 more)
ansys-grantami-bomanalytics-openapi/: .swagger-codegen-ignore  README.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
(+433 files in other folders)
