[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38,py39,py310
isolated_build = True

[gh-actions]
python =
3.6: py36
3.7: py37
3.8: py38
3.9: py39
3.10: py310

[testenv]
deps=-r{toxinidir}/test-requirements.txt
setenv =
PIP_INDEX_URL = {env:PIP_INDEX_URL:https://pypi.org/simple}
PIP_TRUSTED_HOST = {env:PIP_TRUSTED_HOST:}
commands=pytest
"""